crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_232_Camerica_Quattro_Quattro_Arcade_USA_Unl.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-232-Camerica-Quattro/Quattro Arcade (USA) (Unl).nes
rom_sha256=27b0e9946cf43cee0711670b69ab4e385831467773ed9be17ffd67fea735a848
frames=1141
fb_bytes=245760
cycles=33949792
audio_samples=836505
audio_fnv1a64=d20d5df9562096da
checkpoint f900 fb_fnv1a64=092a5a27d382db12
checkpoint f1100 fb_fnv1a64=776e9f812b8afc10
