crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_232_Camerica_Quattro_Quattro_Sports_USA_Unl_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-232-Camerica-Quattro/Quattro Sports (USA) (Unl).zip
rom_sha256=b07a0e243abef7000d327c32177ef3881cc068fd23d34bd886551499b5b3d6fa
frames=1141
fb_bytes=245760
cycles=33949791
audio_samples=836505
audio_fnv1a64=efcfb178ca267f52
checkpoint f900 fb_fnv1a64=e18ee694931ba387
checkpoint f1100 fb_fnv1a64=fb2cd2b5efdad8a0
