crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_234_Maxi15_Maxi_15_AVE_REV2.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-234-Maxi15/Maxi 15 _AVE_ _REV2_ ___.nes
rom_sha256=879a6df7e235c0eb864d1d57fd1165642c6565f800905244e54808751a491e97
frames=1141
fb_bytes=245760
cycles=33949783
audio_samples=836505
audio_fnv1a64=ac64917330e6df74
checkpoint f900 fb_fnv1a64=d1618af08c485ba1
checkpoint f1100 fb_fnv1a64=a9d1681707a4917e
