crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_240_CNE240_Jing_Ke_Xin_Zhuan_Ch_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-240-CNE240/Jing Ke Xin Zhuan (Ch) [!].zip
rom_sha256=12067ebefc9be886ba2c1dbc622bba0e3ba9fd93a91020036e0f60a92f73b5e4
frames=1141
fb_bytes=245760
cycles=33949779
audio_samples=836505
audio_fnv1a64=9b2523274daf1d4c
checkpoint f900 fb_fnv1a64=65c681cad3ed54e2
checkpoint f1100 fb_fnv1a64=e84c94a4e0e6e92f
