crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_240_CNE240_Sheng_Huo_Lie_Zhuan_Asia_Ja_Unl_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-240-CNE240/Sheng Huo Lie Zhuan (Asia) (Ja) (Unl).zip
rom_sha256=9868dd827941b441b9733283b11d5eb644832984bb6f236503b88061bdd2a398
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=0b1a3e4b738a781c
checkpoint f900 fb_fnv1a64=6576afdbd2acdb7c
checkpoint f1100 fb_fnv1a64=6576afdbd2acdb7c
