crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_240_C_E_Multicart_Sheng_Huo_Lie_Zhuan_Ch.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-240-C-E-Multicart/Sheng Huo Lie Zhuan (Ch).nes
rom_sha256=d94705c00cfc3f1cbdf1ed7047e663c9b3c424907f1f188a1f4bab2c199cc21c
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=0b1a3e4b738a781c
checkpoint f900 fb_fnv1a64=6576afdbd2acdb7c
checkpoint f1100 fb_fnv1a64=6576afdbd2acdb7c
